customisation for GBCoC

--- a/default.config.yml
+++ b/default.config.yml
@@ -6,9 +6,9 @@ configure_sudoers: yes
 configure_terminal: yes
 configure_osx: yes
 
-dotfiles_repo: https://github.com/geerlingguy/dotfiles.git
+dotfiles_repo: https://github.com/joshtharakan/dotfiles.git
 dotfiles_repo_accept_hostkey: yes
-dotfiles_repo_local_destination: ~/Dropbox/Development/GitHub/dotfiles
+dotfiles_repo_local_destination: ~/Development/GitHub/dotfiles
 dotfiles_files:
   - .bash_profile
   - .gitignore
@@ -43,6 +43,8 @@ homebrew_installed_packages:
   - pv
   - wget
   - wrk
+  - pyenv
+  - kubernetes-helm
 
 homebrew_taps:
   - homebrew/core
@@ -52,7 +54,7 @@ homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
   - chromedriver
   - docker
-  - dropbox
+  # - dropbox
   - firefox
   - google-chrome
   - handbrake
@@ -64,6 +66,10 @@ homebrew_cask_apps:
   - sublime-text
   - transmit
   - vagrant
+  - virtualbox
+  - visual-studio-code
+  - intellij-idea-ce
+
 
 # See `geerlingguy.mas` role documentation for usage instructions.
 mas_installed_apps: []
